--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<nav>
+  <%= link_to 'Home', root_path %>
+  <%= link_to 'New Post', new_post_path, :remote => true %>
+  <a href="#">Recent Posts</a>
+</nav>
 <%= yield %>
 
 </body>
